# serde_dynamic_typing-rust

./: .appveyor.yml  .gitignore  .travis.yml  Cargo.toml  LICENSE BSD 2-CLAUSE.md  README.md
src/: de.rs  error.rs  lib.rs  ser.rs
src/typing/: boolean.rs  bytes.rs  enumeration.rs  float.rs  integer.rs  map.rs  mod.rs  sequence.rs  utf8_string.rs
tests/: boolean.rs  bytes.rs  enumeration.rs  float.rs  integer.rs  map.rs  sequence.rs  utf8_string.rs
