[package]
name = "serde_dynamic_typing"
version = "0.1.1"
edition = "2018"
authors = ["KizzyCode Software Labs./Keziah Biermann <development@kizzycode.de>"]
keywords = ["serde"]
categories = ["encoding"]
description = "A simplified `serde`-compatible type model that allows dynamic runtime inspection"
license = "BSD-2-Clause OR MIT"
repository = "https://github.com/KizzyCode/serde_dynamic_typing-rust"
readme = "README.md"


[badges]
travis-ci = { repository = "KizzyCode/serde_dynamic_typing-rust" }
appveyor = { repository = "KizzyCode/serde_dynamic_typing-rust" }


[dependencies]
ebacktrace = "0.2.0"
serde = "1.0"


[dev-dependencies]
serde_derive = "1.0"
serde_bytes = "0.11"


[profile.release]
overflow-checks = true

[profile.bench]
overflow-checks = true